--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -71,6 +71,9 @@ td .btn-det{
     display: inline;
     float: left;
 }
+a #menu_toggle{
+    color: #fff; /*modificada*/
+}
 /* Fin de agregados */
 body.nav-sm .container.body .left_col {
     position: fixed;
@@ -119,7 +122,7 @@ body.nav-sm .nav.side-menu li a {
     text-align: center !important;
 }
 body.nav-sm .nav.side-menu li.active-sm {
-    border-right: 5px solid #1abb9c;
+    border-right: 5px solid #bed600; /*modificado*/
 }
 body.nav-sm > .nav.side-menu > li.active-sm > a {
     color: #1abb9c !important;
@@ -235,8 +238,6 @@ body.nav-sm .profile {
     font-size: 10px !important;
 
     text-align: center;
-
-    color: #fff; /*modificada*/
 }
 .active a span.fa {
     margin-right: 4px;
@@ -253,13 +254,13 @@ body.nav-sm .menu_section h3 {
 .nav_menu {
     float: left;
     width: 100%;
-    /*border-bottom: 1px solid #D9DEE4;*/ /*modificado*/
+    border-bottom: 5px solid #bed600; /*modificado*/
 
     margin-bottom: 10px;
     /*background: #F4F6F9;
     border-bottom: 1px solid #E6E9ED;*/
 
-    background: #549b0b; /*modificada*/
+    background: #56078c; /*modificada*/
 }
 body.nav-md .container.body .col-md-3.left_col {
     position: absolute;
@@ -606,8 +607,6 @@ h3,
 }
 a {
     text-decoration: none;
-
-    color: #000; /*modificada*/
 }
 li > a {
     color: green;
@@ -730,7 +729,6 @@ body.nav-md ul.nav.child_menu li:after {
 .nav.side-menu > li > a,
 .nav.child_menu > li > a {
     font-weight: 500;
-
     color: #fff !important; /*modificado*/
 }
 .nav > li > a {
@@ -742,21 +740,13 @@ body.nav-md ul.nav.child_menu li:after {
 .nav.side-menu > li.current-page,
 .nav.side-menu > li.active {
     border-right: 5px solid #bed600; /*modificado*/
+    background-color: #56078c; /*modificado*/
 }
 li.current-page {
     /* background: rgba(255, 0, 0, .48); */ 
 }
 .nav.side-menu > li.active > a {
-    color: #f00;
-    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5b6479), color-stop(100%, #4c5566)), #686e78;
-    background: -webkit-linear-gradient(#334556, #2c4257), #2a3f54;
-    background:    -moz-linear-gradient(#334556, #2c4257), #2a3f54;
-    background:      -o-linear-gradient(#334556, #2c4257), #2a3f54;
-    background:         linear-gradient(#334556, #2c4257), #2a3f54;
-    -webkit-box-shadow: rgba(0, 0, 0, .25) 0 1px 0, inset rgba(255, 255, 255, .16) 0 1px 0;
-       -moz-box-shadow: rgba(0, 0, 0, .25) 0 1px 0, inset rgba(255, 255, 255, .16) 0 1px 0;
-            box-shadow: rgba(0, 0, 0, .25) 0 1px 0, inset rgba(255, 255, 255, .16) 0 1px 0;
-    text-shadow: rgba(0, 0, 0, .25) 0 -1px 0;
+    background-color: #56078C; /*modificado*/
 }
 li.current-page a {
     color: #1abb9c !important;
@@ -839,6 +829,7 @@ li.current-page a {
 .toggle a {
     padding: 15px 15px 0;
     margin: 0;
+    color: #fff; /*modificada*/
 }
 .toggle a i {
     font-size: 26px;
